--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
-
+body{
+    background-image: url("https://youtu.be/6-EOfIleVJk?t=52");
+}
 .main-content{
+background-image: c;
 background-color:#cccccc;
-height: 150em;
+height: 130em;
 border-radius: 4px;
 margin: auto;
 }
@@ -40,8 +43,45 @@ margin: auto;
 }
 img{
     height: 80em;
-    width: 100%;
+    width:100%;
     border-radius: 10px;
+    border: 3px wavvy seagreen;
+    
+}
+.marquee{
+    float: right;
+    border: 3px solid green;
+    width: 45em;
+    border-radius: 5px;
+    height: 80em;
+    text-align: center;
+    font-size: 15px;
+    margin-right: 20px;
+    display: block;
+    overflow: auto;
+}
+#bio{
+    border-bottom:3px solid grey;
+}
+.bio{
+    height: 350px;
+    width: 350px;
+    padding-left: 0px;
+    display: block;
+
+}
+.taya{
+    font-style: italic;
+    font-size: 25px;
+    color: seagreen;
+}
+.taya1{
+    color: slateblue;
+    font-size: 20px;
+    
+}
+#u{
+    border-bottom: 3px solid green;
 }
 #p1{
     display: inline;
@@ -53,13 +93,12 @@ img{
     border-radius: 4px;
 }
 .intro{
-    width: 46%;
+    margin: 10px;
     background-color: powderblue;
     border-radius: 2px;
     border: 2px solid rgb(100, 169, 169);
     padding: 5px;
     float: left;
-    margin-left: 40px;
     height: 17em;
     font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
@@ -83,13 +122,21 @@ h3{
     background-color:darkslategrey
     
 }
+.intro2{
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.cen{
+    text-align: center;
+}
 .footer1{
     background-color:grey;
     color: darkgreen;
     text-align: center;
     font: italic;
-    padding:2px;
+    padding:10px;
     height: 50px;
+    margin: 10px;
     
 
 }
