--- a/about.css
+++ b/about.css
@@ -2,86 +2,77 @@ body{
     background-image: url("https://youtu.be/6-EOfIleVJk?t=52");
 }
 .main-content{
-background-image: c;
+background-image: url("image/praise.jpg");
+background-repeat: no-repeat;
 background-color:#cccccc;
-height: 130em;
+background-size: cover;
+height: 30em;
 border-radius: 4px;
 margin: auto;
 }
-.navigation{
-    margin-top: 5px;
+#h22{
     color: green;
-    font-size:x-large;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    border:2px solid cyan;
-    border-radius: 20px;
-    text-align: right;
-    }
-   ul{
-        text-decoration: none;
-    }
-    li{
+    font-family: 'Times New Roman', Times, serif;
+
+}
+    #icon{
+        border: 3px solid green;
+        cursor: pointer;
+        width: 30px;
+        text-align: left;
         display: inline;
-        padding: 20px;
-        color: green;
+        margin-left: 1500px;
+        border-radius: 5px;
        
     }
     a:hover{
-        cursor: pointer;
-        background-color: rgb(0, 225, 255);
-        font: xx-large;
-        text-decoration: none;
-        border-radius: 15px;
-
+        background-color: palevioletred;
     }
-.logo{
-    float: left;
-    background-color: green;
-    margin-left: 10px;
-    border-radius: 2px;
-    color: indigo;
-}
-img{
-    height: 80em;
-    width:100%;
-    border-radius: 10px;
-    border: 3px wavvy seagreen;
-    
-}
+    #members{
+        color: red;
+    }
+
 .marquee{
-    float: right;
-    border: 3px solid green;
-    width: 45em;
+    width: 100%;
+    border: 2px solid darkslategray;
     border-radius: 5px;
-    height: 80em;
-    text-align: center;
+    height: 30em;
     font-size: 15px;
-    margin-right: 20px;
     display: block;
     overflow: auto;
 }
 #bio{
     border-bottom:3px solid grey;
+    padding: 5px;
 }
 .bio{
     height: 350px;
     width: 350px;
     padding-left: 0px;
     display: block;
+    margin-left: 600px;
+    border-radius: 10px;
 
 }
 .taya{
     font-style: italic;
     font-size: 25px;
-    color: seagreen;
+    color: blue;
 }
 .taya1{
-    color: slateblue;
+    color: black;
     font-size: 20px;
-    
+    text-align: left;
 }
 #u{
     border-bottom: 3px solid green;
+}
+.sub{
+    padding: 20px;
+    border: 3px solid darkturquoise;
+    margin: 5px;
+    text-align: center;
+    border-radius: 10px;
 }
 #p1{
     display: inline;
@@ -99,19 +90,13 @@ img{
     border: 2px solid rgb(100, 169, 169);
     padding: 5px;
     float: left;
-    height: 17em;
+    height: 19em;
     font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
 }
 h2{
-    border-bottom: 2px red dotted;
-    text-align: center;
-}
-ol li{
-    display: block;
-    padding: 2px;
-    text-align: center;
-    
+    border-top: 2px red dotted;
+    text-align: left;
 }
 
 h3{
