--- a/song.css
+++ b/song.css
@@ -9,18 +9,27 @@ body{
     border-radius: 10px;
     margin-top: 100px;
 }
+.icon{
+    border: 3px solid green;
+    cursor: pointer;
+    width: auto;
+    text-align: left;
+    border-radius: 5px;
+   float:right;
+   
+}
 .elevation{
     border: 3px solid white;
     font-size: 20px;
     font-family: monospace;
     font: oblique;
-    color: green;
+    color: white;
 }
 .intro2{
     border: 5px solid black;
     border-radius: 5px;
     width: 96%;
-    margin: 20px;
+    margin: 15px;
 }
 .footer1{
     background-color:grey;
@@ -29,15 +38,20 @@ body{
     padding:10px;
     height: 100px;
     margin: 10px;
+    text-align: right;
     
 
 }
+a{
+    text-decoration: none;
+    color:cyan;
+}
 .song{
-    color: green;
+    color: white;
     margin-left: 300px;
 }
 a:hover{
-    background-color: violet;
+    background-color: green;
     font-size: 30px;
     text-decoration: none;
 }
@@ -53,6 +67,7 @@ p{
    font-size: 30px;
 }
 h3{
+    margin: auto;
     border-bottom: 3px solid red;
 
 }
